--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Jekyll Tilde Theme for GitHub Pages"
+title: "Jekyll Tilde Theme"
 # If brand is not set the github user avatar will be used.
 # Priority:
 # - image
