--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ github:
   user: "0x007e"
   # email: "person@mail.address"
 copyright: "Distributed by 0x007E"
-license: "https://github.com/0x007e/tilde/LICENSE.md"
+license: "https://github.com/0x007e/jekyll-tilde-theme/LICENSE.md"
 
 description: >
   The theme is to write blog posts, either in categories or a single collection of
@@ -48,7 +48,7 @@ social:
 
 tilde:
   # Restict links in navbar to listed pages
-  # -> e.g. if you have a README.md/LICENSE.md in your root folder
+  # -> e.g. if you have a README.md/LICENSE.md in your root folder and they should not be displayed.
   nav_pages:
     - about.md
     - impressum.md
@@ -56,7 +56,7 @@ tilde:
   # Possible formats: https://shopify.github.io/liquid/filters/date/
   # date_format: "%b %-d, %Y"
   show_introduction: true
-  visible_posts: 2
+  visible_posts: 4
   category_show_goto: true
   truncate_next_blog_link: 35
 
@@ -65,12 +65,11 @@ tilde:
 #   github_column: 4
 #   description_column: 6
 
-
 feed:
   hide: false
   color: "success"
 
-#google_analytics: "UA-XXXXXXXXX-X" # Google Analytics tracking ID
+google_analytics: "G-H6LVWKSNLX" # Google Analytics tracking ID
 
 plugins:
   - jekyll-feed
