--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,13 @@ feed:
   color: "success"
 
 google_analytics: "G-H6LVWKSNLX" # Google Analytics tracking ID
+cookies:
+  title: Cookies & Privacy
+  text: >
+    This website uses cookies for analysis and personalization (Google Analytics).
+    Should cookies be allowed?
+  button_accept: Accept
+  button_decline: Decline
 
 plugins:
   - jekyll-feed
